app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diploma-app
spec:
  selector:
    app: diploma-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
